# ai-stock-review

./: .gitignore  AGENTS.md  PRD.md  README.md  pyproject.toml  stock-review.md
data/: stock_review.sqlite
data/evidence/: 2026-07-06_sample.json  2026-07-06_snapshot.json  2026-07-10_snapshot.json
docs/: LOCAL_DATA_OPERATIONS.md  PRODUCT_REQUIREMENTS.md
reports/daily/: 2026-07-06_plan.md  2026-07-06_review.md  2026-07-07_plan.md  2026-07-07_review.md  2026-07-10_plan.md  2026-07-10_review.md
reports/weekly/: 2026-07-06_to_2026-07-10_learning.md
src/ai_stock_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stock_review/: __init__.py  cli.py
src/stock_review/evidence/: __init__.py  akshare_source.py  check_history_readiness.py  collect_pool_stock_history.py  evidence_snapshot.py  hhxg_source.py  manage_evidence_snapshot.py  summarize_hhxg_history.py  summarize_market_history.py  summarize_review_facts.py  summarize_sector_history.py
src/stock_review/learning/: __init__.py  summarize_weekly_learning.py
tests/: test_akshare_source.py  test_evidence_snapshot.py  test_final_draft.py  test_hhxg_history.py  test_hhxg_source.py  test_history_readiness.py  test_manual_final_response.py  test_manual_review.py  test_market_history.py  test_observation.py  test_pool_candidates.py  test_pool_item.py  test_pool_stock_history.py  test_review_context.py  test_review_document.py  test_review_facts.py  test_review_framework.py  test_scoring.py  test_sector_history.py  test_step9_patterns.py  test_trade_plan.py  test_weekly_learning.py
(+24 files in other folders)
